--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,3 +1,5 @@
 <footer class="footer">
-<small>Copyright © 2016, by <a href="mailto:williamharoldyoung@gmail.com">William H Young</a></small>
+        <small>
+            Copyright © 2016, by <a href="mailto:williamharoldyoung@gmail.com">William H Young</a>
+        </small>
 </footer>
