--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,39 @@
 // Place all the styles related to the users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+@import "bootstrap-sprockets";
+@import "bootstrap";
+
+footer {
+  border-color: #e7e7e7;
+  background-color: #f1f1f1;
+  bottom: 0px;
+  margin-bottom: 0px;
+  border-width: 1px 0px 0px;
+  border: 1px solid #a1a1a1;
+  position: fixed;
+  right: 0px;
+  left: 0px;
+  z-index: 1030;
+  height: 24px;
+  min-height: 24px;
+}
+
+footer small {
+  float: left;
+}
+tr.clickable-row { 
+    cursor: pointer; 
+}
+
+a.header-tooltip {
+  color: black;
+  text-decoration: none;
+}
+
+.logo {
+  margin-top: -10px;
+  margin-left: -10px;
+}
