--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,14 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+<%= render 'shared/nav' %>
+<%= render 'shared/about' %>
+<%= render 'shared/flash' %>
 
-<%= yield %>
+<div class="container">
+  <%= yield %>
+</div>
 
+<%= render 'shared/footer'%>
 </body>
 </html>
