--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,2 +1,8 @@
-<h1>Users#new</h1>
-<p>Find me in app/views/users/new.html.erb</p>
+<div class="container container-table">
+    <div class="row verticle-center-row">
+        <div class="text-center col-md-4 col-md-offset-4 well">
+            <h1>Register Account:</h1>
+            <%= render 'form' %>
+        </div>
+    </div>
+</div>
