--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -17,7 +17,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <% if logged_in? %>
         <ul class="nav navbar-nav">
-          <li><%= link_to 'Finished Assignments', new_assignment_path %></li>
+          <li><%= link_to 'New Assignments', new_assignment_path %></li>
           <li><%= link_to 'My Boards', boards_path %></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
