--- a/app/views/assignments/new.html.erb
+++ b/app/views/assignments/new.html.erb
@@ -1,2 +1,9 @@
-<h1>Assignments#new</h1>
-<p>Find me in app/views/assignments/new.html.erb</p>
+<div class="container container-table">
+    <div class="row verticle-center-row">
+        <div id="assignmentForm" class="col-md-4 col-md-offset-4 well">
+            <h1 class="text-center">Create Assignment:</h1>
+            <%= render 'form' %>
+        </div>
+    </div>
+</div>
+
