--- a/app/views/boards/new.html.erb
+++ b/app/views/boards/new.html.erb
@@ -1,2 +1,8 @@
-<h1>Create a Board</h1>
-<%= render 'form' %>
+<div class="container container-table">
+    <div class="row verticle-center-row">
+        <div class="text-center col-md-4 col-md-offset-4 well">
+            <h1>Create Board:</h1>
+            <%= render 'form' %>
+        </div>
+    </div>
+</div>
