--- a/app/views/shared/_about.html.erb
+++ b/app/views/shared/_about.html.erb
@@ -11,12 +11,13 @@
         </div>
         <div class="modal-body">
           <p>
-              <ol>
-                  <li>Organize</li>
-                  <li>Group</li>
-                  <li>Assignment</li>
-                  <li>Execution</li>
-              </ol>
+              Collaboration Boards is a prototype of an organizational board system to help people keep organized and know what needs to be done and what has the highest priority.
+              <ul>
+              	<li>Boards for different Groups</li>
+              	<li>Badges showing number of assignments in each group</li>
+              	<li>Color coded assignments based on priority</li>
+              	<li>Ability to add/update/complete assignments</li>
+              </ul>
           </p>
         </div>
         <div class="modal-footer">
