Adding My Tasks Board

--- a/app/views/boards/index.html.erb
+++ b/app/views/boards/index.html.erb
@@ -4,5 +4,7 @@
         <% @boards.each do |b| %>
             <%= board_list(b) %>
         <% end %>
+        <br>
+        <%= my_board() %>
     </div>
 </div>
