--- a/app/views/boards/_board.html.erb
+++ b/app/views/boards/_board.html.erb
@@ -14,8 +14,8 @@
                         <span class="glyphicon glyphicon-plus" style="color:green" aria-hidden="true"></span>
                     </a>
                 <% end %>
-                <strong style="color:black"><%= a.owner == 0 ? "" : assignment_user(a) %></strong>
-                <%= a.subject %>
+                <strong style="color:black"><%= a.owner == 0 ? "" : User.find(a.owner).name %></strong>
+                <%= link_to a.subject, assignment_path(a) %>
             </li>
         <% end %>
     </ul>
