--- a/app/views/boards/_board.html.erb
+++ b/app/views/boards/_board.html.erb
@@ -9,10 +9,9 @@
                     <%= link_to ('<span class="glyphicon glyphicon-check" style="color:blue" aria-hidden="true"></span>').html_safe, 
                         assignment_path(a), method: "delete", data: { confirm: "Are you sure you completed the assignment?" } %>
                 <% end %>
-                <% if a.owner == 0 %>
+                <% unless a.owner == get_user_id %>
                     <a href="<%= assign_path(a) %>">
-                        <span class="glyphicon glyphicon-plus" style="color:green" aria-hidden="true"></span>
-                    </a>
+                        <span class="glyphicon glyphicon-plus" style="color:green" aria-hidden="true"></span></a>
                 <% end %>
                 <strong style="color:black"><%= a.owner == 0 ? "" : User.find(a.owner).name %></strong>
                 <%= link_to a.subject, assignment_path(a) %>
