--- a/app/views/boards/_board.html.erb
+++ b/app/views/boards/_board.html.erb
@@ -3,18 +3,18 @@
         <% @assignments.each do |a| %>
             <li class="list-group-item list-group-item-<%= assignment_color(a) %>">
                 
-                <% if a.owner == get_user_id %>
+                <% if a.owner == session[:user_id] %>
                     <a href="<%= drop_path(a) %>">
                         <span class="glyphicon glyphicon-remove" style="color:red" aria-hidden="true"></span></a>
                     <%= link_to ('<span class="glyphicon glyphicon-check" style="color:blue" aria-hidden="true"></span>').html_safe, 
                         assignment_path(a), method: "delete", data: { confirm: "Are you sure you completed the assignment?" } %>
                 <% end %>
-                <% unless a.owner == get_user_id %>
+                <% unless a.owner == session[:user_id] %>
                     <a href="<%= assign_path(a) %>">
                         <span class="glyphicon glyphicon-plus" style="color:green" aria-hidden="true"></span></a>
                 <% end %>
                 <strong style="color:black"><%= a.owner == 0 ? "" : User.find(a.owner).name %></strong>
-                <%= link_to a.subject, assignment_path(a) %>
+                <%= link_to a.subject, assignment_path(a), class: "m_a_link" , url: assignment_path(a) %>
             </li>
         <% end %>
     </ul>
