--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
   <%= yield %>
 </div>
 
-<%= render 'shared/footer'%>
+<%= render 'shared/footer' %>
+<%= render 'shared/modal' %>
 </body>
 </html>
