--- a/app/views/boards/show.html.erb
+++ b/app/views/boards/show.html.erb
@@ -1,2 +1,4 @@
-<h2 class="text-center"><%= @board.name %></h2>
+<h2 class="text-center">
+    <%= @board.name %> <%= link_to "(Wash)", washes_path(:board => @board.id), style: "font-size: 12px;" %>
+</h2> 
 <%= render 'board' %>
