--- a/app/views/washes/index.html.erb
+++ b/app/views/washes/index.html.erb
@@ -1,29 +1,20 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Listing Washes</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Completed by</th>
-      <th>Title</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @washes.each do |wash| %>
+<h1>Wash for: <%= Board.find_by(id: params[:board]).name %></h1>
+  <table class="table">
+      <th style="width: 100px;">Completed At</th>
+      <th style="width: 144px;">Completed By</th>
+      <th>Assignment</th>
+    <tbody>
+      <% @washes.each do |wash| %>
       <tr>
-        <td><%= wash.completed_by %></td>
+        <td style="text-align: left;">
+          <span class="badge">
+            <%= wash.created_at.in_time_zone("Eastern Time (US & Canada)").strftime("%m-%d-%y at %I:%M %p") %>
+          </span>
+        </td>
+        <td style="text-align: left;"><%= User.find_by(id: wash.completed_by).name %></td>
         <td><%= wash.title %></td>
-        <td><%= link_to 'Show', wash %></td>
-        <td><%= link_to 'Edit', edit_wash_path(wash) %></td>
-        <td><%= link_to 'Destroy', wash, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
-    <% end %>
-  </tbody>
-</table>
-
+      <% end %>
+    </tbody>
+  </table>
 <br>
-
-<%= link_to 'New Wash', new_wash_path %>
