--- a/app/views/assignments/_form.html.erb
+++ b/app/views/assignments/_form.html.erb
@@ -16,21 +16,15 @@
 </p>
 <p>
     <%= f.label :subject %><br>
-    <%= f.text_field :subject %>
-</p>
-<p>
-    <%= f.label :body %><br>
-    <%= f.text_area :body %>
+    <%= f.text_field :subject, style: 'width: 328px;' %>
 </p>
 <p>
     <%= f.label :level, 'Priority' %>
     <%= f.select :level, [['Lowest', '1'],['Low', '2'],['Medium', '3'],['High', '4'],['Highest', '5']] %>
     
-
     <br>
     <%= f.label :board %>
     <%= f.select :board, [['OA', '1'],['HRA', '2'],['HRBP', '3']] %>
-    
     <br>
 </p>
 <%= f.submit %>
