--- a/app/views/boards/_board.html.erb
+++ b/app/views/boards/_board.html.erb
@@ -1,8 +1,11 @@
 <div class="well">
     <ul class="list-group">
+        <a href="#"></a>
         <% @assignments.each do |a| %>
             <li class="list-group-item list-group-item-<%= assignment_color(a) %>">
-                
+                <span class="badge" style="background-color:<%= datetime_color(a.due_date) %>">
+                    <%= a.due_date.strftime("%m-%d-%y at %I:%M %p") %>
+                </span>
                 <% if a.owner == session[:user_id] %>
                     <a href="<%= drop_path(a) %>">
                         <span class="glyphicon glyphicon-remove" style="color:red" aria-hidden="true"></span></a>
