--- a/app/views/shared/_modal.html.erb
+++ b/app/views/shared/_modal.html.erb
@@ -8,7 +8,11 @@
           <button type="button" class="close" data-dismiss="modal">&times;</button>
           <h4 class="modal-editing-title"></h4>
         </div>
-            <div class="modal-editing-body"></div>
+        
+        <div id="assignmentForm" class="well">
+          <div id="modal-editing-body">..</div>
+        </div>
+        
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
         </div>
