--- a/app/views/assignments/show.js.erb
+++ b/app/views/assignments/show.js.erb
@@ -1,2 +1,3 @@
 $('#modal-editing-body').html("<%= j(render 'form') %>");
+$('.modal-title').html("Update Assignment");
 $('#modal-editing').modal("show");
