--- a/app/views/shared/_modal.html.erb
+++ b/app/views/shared/_modal.html.erb
@@ -6,6 +6,7 @@
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <h4 class="modal-title">Title</h4>
           <h4 class="modal-editing-title"></h4>
         </div>
         
