--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -17,7 +17,15 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <% if logged_in? %>
         <ul class="nav navbar-nav">
-          <li><%= link_to 'New Assignments', new_assignment_path, remote: true %></li>
+          <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">New<span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><%= link_to 'New Assignment', new_assignment_path, remote: true %></li>
+            <li role="separator" class="divider"></li>
+            <li><%= link_to 'New Standard Work', new_standard_work_path , remote: true %></li>
+          </ul>
+        </li>
+          
           <li><%= link_to 'My Boards', boards_path %></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
