--- a/app/views/standard_works/_form.html.erb
+++ b/app/views/standard_works/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@standard_work) do |f| %>
+<%= form_for @standard_work, remote: true do |f| %>
   <% if @standard_work.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@standard_work.errors.count, "error") %> prohibited this standard_work from being saved:</h2>
