--- a/app/views/standard_works/new.js.erb
+++ b/app/views/standard_works/new.js.erb
@@ -1,3 +1,3 @@
 $('#modal-editing-body').html("<%= j(render 'form') %>");
-$('.modal-title').html("New Assignment");
+$('.modal-title').html("New Standard Work");
 $('#modal-editing').modal("show");
