--- a/app/views/boards/_board.html.erb
+++ b/app/views/boards/_board.html.erb
@@ -10,7 +10,7 @@
                     <a href="<%= drop_path(a) %>">
                         <span class="glyphicon glyphicon-remove" style="color:red" aria-hidden="true"></span></a>
                     <%= link_to ('<span class="glyphicon glyphicon-check" style="color:blue" aria-hidden="true"></span>').html_safe, 
-                        assignment_path(a), method: "delete", data: { confirm: "Are you sure you completed the assignment?" } %>
+                        new_wash_path(:id => a.id) , remote: true %>
                 <% end %>
                 <% unless a.owner == session[:user_id] %>
                     <a href="<%= assign_path(a) %>">
