--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -25,7 +25,7 @@
             <li><%= link_to 'New Standard Work', new_standard_work_path , remote: true %></li>
           </ul>
         </li>
-          
+          <li><%= link_to 'Standard Work', standard_works_path %></li>
           <li><%= link_to 'My Boards', boards_path %></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
