--- a/app/views/boards/_board.html.erb
+++ b/app/views/boards/_board.html.erb
@@ -18,10 +18,10 @@
                 <% end %>
                 <strong style="color:black"><%= a.owner == 0 ? "" : User.find(a.owner).name %></strong>
                 <%= link_to a.subject, assignment_path(a), remote: true %>
-                <% if is_admin %>
+                <!--- % if is_admin % --->
                 <a href="<%= assign_path(a) %>">
                     <span class="glyphicon glyphicon-send" style="color:blue" aria-hidden="true"></span></a>
-                <% end %>
+                <!--- % end % --->
             </li>
         <% end %>
     </ul>
