--- a/app/views/standard_works/_sw.html.erb
+++ b/app/views/standard_works/_sw.html.erb
@@ -1,42 +1,52 @@
-<table style="border: 1px solid black; border-collapse: collapse;">
+<style>
+table, th, td {
+    border: 1px solid black;
+    border-collapse: collapse;
+}
+
+th, td {
+    padding-left: 5px;
+    padding-right: 5px;
+}
+</style>
+<table>
   <thead>
-    <tr style="border: 1px solid black;">
-      <th style="border: 1px solid black;">Subject</th>
-      <th style="border: 1px solid black;">Board</th>
-      <th style="border: 1px solid black;">Start time</th>
-      <th style="border: 1px solid black;">Due time</th>
-      <th style="border: 1px solid black;">Sun</th>
-      <th style="border: 1px solid black;">Mon</th>
-      <th style="border: 1px solid black;">Tue</th>
-      <th style="border: 1px solid black;">Wed</th>
-      <th style="border: 1px solid black;">Thu</th>
-      <th style="border: 1px solid black;">Fri</th>
-      <th style="border: 1px solid black;">Sat</th>
-      <th style="border: 1px solid black;">Level</th>
-      <th style="border: 1px solid black;">Owner</th>
-      <th colspan="3"></th>
+    <tr>
+      <th>Subject</th>
+      <th>Board</th>
+      <th>Start time</th>
+      <th>Due time</th>
+      <th>Sun</th>
+      <th>Mon</th>
+      <th>Tue</th>
+      <th>Wed</th>
+      <th>Thu</th>
+      <th>Fri</th>
+      <th>Sat</th>
+      <th>Level</th>
+      <th>Owner</th>
+      <th colspan="2">Options</th>
     </tr>
   </thead>
 
   <tbody>
     <% @standard_works.each do |standard_work| %>
-      <tr style="border: 1px solid black;">
-        <td style="border: 1px solid black;"><%= standard_work.subject %></td>
-        <td style="border: 1px solid black;"><%= standard_work.board %></td>
-        <td style="border: 1px solid black;"><%= standard_work.start_time %></td>
-        <td style="border: 1px solid black;"><%= standard_work.due_time %></td>
-        <td style="border: 1px solid black;"><%= standard_work.sun %></td>
-        <td style="border: 1px solid black;"><%= standard_work.mon %></td>
-        <td style="border: 1px solid black;"><%= standard_work.tue %></td>
-        <td style="border: 1px solid black;"><%= standard_work.wed %></td>
-        <td style="border: 1px solid black;"><%= standard_work.thu %></td>
-        <td style="border: 1px solid black;"><%= standard_work.fri %></td>
-        <td style="border: 1px solid black;"><%= standard_work.sat %></td>
-        <td style="border: 1px solid black;"><%= standard_work.level %></td>
-        <td style="border: 1px solid black;"><%= standard_work.owner %></td>
-        <td style="border: 1px solid black;"><%= link_to 'Show', standard_work %></td>
-        <td style="border: 1px solid black;"><%= link_to 'Edit', edit_standard_work_path(standard_work) %></td>
-        <td style="border: 1px solid black;"><%= link_to 'Destroy', standard_work, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      <tr>
+        <td><%= standard_work.subject %></td>
+        <td><%= Board.find(standard_work.board).name %></td>
+        <td><%= standard_work.start_time %></td>
+        <td><%= standard_work.due_time %></td>
+        <td><%=  standard_work.sun ? ('<span class="glyphicon glyphicon-ok" aria-hidden="true"></span>').html_safe : ""%></td>
+        <td><%= standard_work.mon ? ('<span class="glyphicon glyphicon-ok" aria-hidden="true"></span>').html_safe : ""%></td>
+        <td><%= standard_work.tue ? ('<span class="glyphicon glyphicon-ok" aria-hidden="true"></span>').html_safe : ""%></td>
+        <td><%= standard_work.wed ? ('<span class="glyphicon glyphicon-ok" aria-hidden="true"></span>').html_safe : ""%></td>
+        <td><%= standard_work.thu ? ('<span class="glyphicon glyphicon-ok" aria-hidden="true"></span>').html_safe : ""%></td>
+        <td><%= standard_work.fri ? ('<span class="glyphicon glyphicon-ok" aria-hidden="true"></span>').html_safe : ""%></td>
+        <td><%= standard_work.sat ? ('<span class="glyphicon glyphicon-ok" aria-hidden="true"></span>').html_safe : ""%></td>
+        <td><%= standard_work.level %></td>
+        <td><%= standard_work.owner %></td>
+        <td><%= link_to 'Edit', edit_standard_work_path(standard_work), remote: true %></td>
+        <td><%= link_to 'Destroy', standard_work, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
