--- a/app/views/standard_works/index.html.erb
+++ b/app/views/standard_works/index.html.erb
@@ -2,6 +2,17 @@
 
 <h1>Listing Standard Works</h1>
 
+<style>
+table, th, td {
+    border: 1px solid black;
+    border-collapse: collapse;
+}
+
+th, td {
+    padding-left: 5px;
+    padding-right: 5px;
+}
+</style>
 <table>
   <thead>
     <tr>
@@ -18,7 +29,7 @@
       <th>Sat</th>
       <th>Level</th>
       <th>Owner</th>
-      <th colspan="3"></th>
+      <th colspan="3">Options</th>
     </tr>
   </thead>
 
@@ -29,13 +40,13 @@
         <td><%= standard_work.board %></td>
         <td><%= standard_work.start_time %></td>
         <td><%= standard_work.due_time %></td>
-        <td><%= standard_work.sun %></td>
-        <td><%= standard_work.mon %></td>
-        <td><%= standard_work.tue %></td>
-        <td><%= standard_work.wed %></td>
-        <td><%= standard_work.thu %></td>
-        <td><%= standard_work.fri %></td>
-        <td><%= standard_work.sat %></td>
+        <td><%=  standard_work.sun ? ('<span class="glyphicon glyphicon-ok" aria-hidden="true"></span>').html_safe : ""%></td>
+        <td><%= standard_work.mon ? ('<span class="glyphicon glyphicon-ok" aria-hidden="true"></span>').html_safe : ""%></td>
+        <td><%= standard_work.tue ? ('<span class="glyphicon glyphicon-ok" aria-hidden="true"></span>').html_safe : ""%></td>
+        <td><%= standard_work.wed ? ('<span class="glyphicon glyphicon-ok" aria-hidden="true"></span>').html_safe : ""%></td>
+        <td><%= standard_work.thu ? ('<span class="glyphicon glyphicon-ok" aria-hidden="true"></span>').html_safe : ""%></td>
+        <td><%= standard_work.fri ? ('<span class="glyphicon glyphicon-ok" aria-hidden="true"></span>').html_safe : ""%></td>
+        <td><%= standard_work.sat ? ('<span class="glyphicon glyphicon-ok" aria-hidden="true"></span>').html_safe : ""%></td>
         <td><%= standard_work.level %></td>
         <td><%= standard_work.owner %></td>
         <td><%= link_to 'Show', standard_work %></td>
@@ -45,7 +56,4 @@
     <% end %>
   </tbody>
 </table>
-
 <br>
-
-<%= link_to 'New Standard work', new_standard_work_path %>
